# Integra-o-SDK

./: .gitignore
Projeto 01/src/: main.cpp
Projeto01/: CMakeLists.txt
Projeto01/include/: controle.h  menu_options.h  meter_energy.h  meter_water.h  religadores.h  textos.h
Projeto01/src/: controle.cpp  main.cpp  menu_options.cpp  meter_energy.cpp  meter_water.cpp  religadores.cpp  textos.cpp
Projeto01/test/: CMakeLists.txt  catch.hpp
Projeto01/test/src/: teste_meter_energy.cpp
Projeto02/: Cmakelists.txt
Projeto02/include/: Application.h  EletraEnergySolutions.h  Medidor.h  Utility.h  console.h  fabrica_de_medidor.h  medidor_de_energia.h
Projeto02/include/Services/: Projeto02Utilityservices.h  Projeto02services.h
Projeto02/include/medidor_de_energia/: apolo.h  ares.h  cronos.h  medidor_de_energia.h  zeus.h
Projeto02/proto/: Cmakelists.txt  projeto02.proto  projeto02_1.proto
Projeto02/src/: Application.cpp  EletraEnergySolutions.cpp  Utility.cpp  console.cpp  fabrica_de_medidor.cpp  main.cpp  medidor_de_energia.cpp
Projeto02/src/Services/: Projeto02Utilityservices.cpp  Projeto02sevices.cpp
Projeto02/src/medidor_de_energia/: apolo.cpp  ares.cpp  cronos.cpp  zeus.cpp
Projeto02/test/: CMakeLists.txt  test_EletraEnergySolutions.cpp  test_Utility.cpp  test_apolo.cpp  test_ares.cpp  test_cronos.cpp  test_eletraenergysolution.cpp  test_medidor_de_energia.cpp  test_zeus.cpp
Projeto02/test/medidor_de_energia/: test_apolo.cpp  test_ares.cpp  test_cronos.cpp  test_zeus.cpp
Projeto02/test/services/: test_utility_services.cpp
